[gd_scene load_steps=34 format=3 uid="uid://croqf56mq1mw1"]

[ext_resource type="Script" path="res://Enemies/enemy_beast.gd" id="1_xej4h"]
[ext_resource type="Texture2D" uid="uid://c4kdoj3b56b0g" path="res://Assets/Light Bandit/LightBandit.png" id="2_mmujg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oro3h"]
radius = 12.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l5g80"]
radius = 1134.85

[sub_resource type="CircleShape2D" id="CircleShape2D_ohfbg"]
radius = 54.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kki6n"]
atlas = ExtResource("2_mmujg")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4yxc"]
atlas = ExtResource("2_mmujg")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxloi"]
atlas = ExtResource("2_mmujg")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axj1j"]
atlas = ExtResource("2_mmujg")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbtio"]
atlas = ExtResource("2_mmujg")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u7by"]
atlas = ExtResource("2_mmujg")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b33p"]
atlas = ExtResource("2_mmujg")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk3j8"]
atlas = ExtResource("2_mmujg")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8qm1"]
atlas = ExtResource("2_mmujg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vawq"]
atlas = ExtResource("2_mmujg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8soln"]
atlas = ExtResource("2_mmujg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ww6"]
atlas = ExtResource("2_mmujg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffi5j"]
atlas = ExtResource("2_mmujg")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm1xt"]
atlas = ExtResource("2_mmujg")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ri14"]
atlas = ExtResource("2_mmujg")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjtqy"]
atlas = ExtResource("2_mmujg")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oau63"]
atlas = ExtResource("2_mmujg")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjpv0"]
atlas = ExtResource("2_mmujg")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a2p5"]
atlas = ExtResource("2_mmujg")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt04o"]
atlas = ExtResource("2_mmujg")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_76qgj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kki6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4yxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxloi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axj1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbtio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u7by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b33p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk3j8")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8qm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vawq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8soln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6ww6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffi5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ri14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjtqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oau63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjpv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a2p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt04o")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnbtt"]
radius = 12.0
height = 26.0

[sub_resource type="Animation" id="Animation_03bog"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/AttackArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tbdlj"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/AttackArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8rsq"]
_data = {
"RESET": SubResource("Animation_03bog"),
"attack": SubResource("Animation_tbdlj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8lngp"]
radius = 6.0
height = 22.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1lat"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huji8"]
bg_color = Color(0.729412, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[node name="EnemyBeast" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_xej4h")

[node name="AttackRangeArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea2D"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oro3h")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="DetectArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea2D"]
shape = SubResource("CircleShape2D_l5g80")
debug_color = Color(1, 0, 0, 0)

[node name="DetectCloseArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectCloseArea2D"]
shape = SubResource("CircleShape2D_ohfbg")
debug_color = Color(1, 0, 0, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4)
sprite_frames = SubResource("SpriteFrames_76qgj")
animation = &"attack"
flip_h = true

[node name="AttackArea2D" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackArea2D"]
position = Vector2(11, -6)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_rnbtt")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8rsq")
}

[node name="WanderStopTimer" type="Timer" parent="."]
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_8lngp")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = 26.0
offset_right = 10.0
offset_bottom = 31.0
theme_override_styles/background = SubResource("StyleBoxFlat_x1lat")
theme_override_styles/fill = SubResource("StyleBoxFlat_huji8")
value = 50.0
show_percentage = false

[connection signal="body_entered" from="AttackRangeArea2D" to="." method="_on_attack_range_area_2d_body_entered"]
[connection signal="body_exited" from="AttackRangeArea2D" to="." method="_on_attack_range_area_2d_body_exited"]
[connection signal="body_entered" from="DetectArea2D" to="." method="_on_detect_area_2d_body_entered"]
[connection signal="body_exited" from="DetectArea2D" to="." method="_on_detect_area_2d_body_exited"]
[connection signal="body_entered" from="DetectCloseArea2D" to="." method="_on_detect_close_area_2d_body_entered"]
[connection signal="body_exited" from="DetectCloseArea2D" to="." method="_on_detect_close_area_2d_body_exited"]
[connection signal="body_entered" from="AnimatedSprite2D/AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
